Changed env variables to hardcoded values to test pipeline

--- a/.axoCover/settings.json
+++ b/.axoCover/settings.json
@@ -1,7 +1,8 @@
 {
   "TestRunner": "",
-  "TestPlatform": "x86",
-  "TestApartmentState": "STA",
+  "TestPlatform": "x64",
+  "TestApartmentState": "MTA",
+  "TestAdapterMode": "Standard",
   "TestSettings": "",
   "ExcludeAttributes": "System.Diagnostics.CodeAnalysis.ExcludeFromCodeCoverageAttribute",
   "ExcludeFiles": "",
